--- a/3HNM BANK/css/style1.css
+++ b/3HNM BANK/css/style1.css
@@ -647,3 +647,54 @@ p {
     border: 1px solid #ccc;
     border-radius: 3px;
 }
+
+
+
+
+
+
+
+
+/* PROFILE BUTTON  */
+
+.dropbtn {
+    width: 100%;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    background-color: #f1f1f1;
+    width: 80px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    margin-right: 10%;
+    height: 80px;
+    text-align: left;
+    align-items: center;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    padding-left: 0%;
+    padding-top: 10%;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
