--- a/3HNM BANK/css/style1.css
+++ b/3HNM BANK/css/style1.css
@@ -482,7 +482,7 @@ input[type=radio] {
 .Loan-app {
     display: -webkit-flex;
     display: flex;
-    width: 92%;
+    width: 100%;
     height: 25%;
     border: 2px solid blueviolet;
     /* background-color: blue; */
@@ -497,6 +497,7 @@ input[type=radio] {
     text-align: left;
     border: 2px solid blueviolet;
     padding: 30px;
+    margin-left: 20px;
 }
 
 .personal-words {
@@ -505,14 +506,16 @@ input[type=radio] {
     flex: 0.5;
     /* border: 3px solid salmon; */
     float: left;
-    margin-left: 8%;
     margin-top: 20px;
+    width: 200px;
+    padding-right: 0;
+
 }
 
 .personal-inputs {
-    -webkit-flex: 0.5;
-    -ms-flex: 0.5;
-    flex: 0.5;
+    -webkit-flex: 0.2;
+    -ms-flex: 0.2;
+    flex: 0.2;
     flex-direction: column;
     height: calc(38vh - 100px);
     /* border: 3px solid seagreen; */
